--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,28 +13,28 @@
     <string name="mail_to_felipe" translatable="false">felipe.gonzalezalarcon94@gmail.com</string>
 
     <!-- TOOLBAR Menu STRINGS -->
-    <string name="menu_settings">Configuración</string>
+    <string name="menu_settings">Settings</string>
 
     <!--TABS -->
-    <string name="tab_map">Mapa</string>
-    <string name="tab_list">Sismos</string>
-    <string name="tab_reports">Reportes</string>
+    <string name="tab_map">Map</string>
+    <string name="tab_list">Quakes</string>
+    <string name="tab_reports">Reports</string>
 
     <!-- SHARE TEXT -->
-    <string name="SHARE_TITLE">Alerta sísmica</string>
-    <string name="SHARE_SUB_TITLE">Información sismológica</string>
-    <string name="SHARE_CITY">Ciudad</string>
-    <string name="SHARE_LOCAL_HOUR">Hora Local</string>
-    <string name="SHARE_MAGNITUDE">Magnitud</string>
-    <string name="SHARE_DEPTH">Profundidad</string>
-    <string name="SHARE_GEO_REF">Georeferencia</string>
-    <string name="SHARE_DOWNLOAD_MSG"><![CDATA[Descarga la app aquí ->]]></string>
+    <string name="SHARE_TITLE">Seismic alert</string>
+    <string name="SHARE_SUB_TITLE">Seismological information</string>
+    <string name="SHARE_CITY">City</string>
+    <string name="SHARE_LOCAL_HOUR">Local Hour</string>
+    <string name="SHARE_MAGNITUDE">Magnitude</string>
+    <string name="SHARE_DEPTH">Depth</string>
+    <string name="SHARE_GEO_REF">Georeference</string>
+    <string name="SHARE_DOWNLOAD_MSG"><![CDATA[Download the app here ->]]></string>
 
     <!-- FIREBASE strings -->
-    <string name="firebase_channel_name_quakes">Alerta sismos</string>
-    <string name="firebase_channel_description_quakes">Recibe alertas de sismos</string>
-    <string name="firebase_pref_key_alert_on">Alertas activadas</string>
-    <string name="firebase_pref_key_alert_off">Alertas desactivadas</string>
+    <string name="firebase_channel_name_quakes">Quake alerts</string>
+    <string name="firebase_channel_description_quakes">Receives quake alerts</string>
+    <string name="firebase_pref_key_alert_on">Alerts enabled</string>
+    <string name="firebase_pref_key_alert_off">Alerts disabled</string>
 
     <!-- ROOT PREFERENCES -->
     <string name="night_mode_key" translatable="false">pref_night_mode</string>
@@ -49,140 +49,139 @@
 
 
     <!-- STRINGS DE LAYOUTS-->
-    <string name="cd_paint_circle">Color magnitud sismo</string>
-    <string name="cd_toolbar_image">Fondo de barra de herramientas</string>
-    <string name="quake_time_day_info_windows">Hace: %1$d d</string>
-    <string name="quake_time_day_hour_info_windows">Hace: %1$d d %2$d h</string>
-    <string name="quake_time_hour_info_windows">Hace: %1$d h</string>
-    <string name="quake_time_minute_info_windows">Hace: %1$d m</string>
-    <string name="quake_time_second_info_windows">Hace: %1$d s</string>
-    <string name="cd_datetime_icon">Icono fecha sismos</string>
-    <string name="date_time_title">Fecha/Hora</string>
-    <string name="gms_icon">Icono posición sismo</string>
-    <string name="gms_title">Posición GMS</string>
-    <string name="cd_depth_icon">Icono epicentro</string>
-    <string name="cd_scale_icon">Icono escala</string>
-    <string name="depth_title">Profundidad</string>
-    <string name="scale_title">Escala</string>
-    <string name="local_magnitude">Magnitud Local (Ml)</string>
-    <string name="moment_magnitude" tools:ignore="Typos">Magnitud Momento (Mw)</string>
-    <string name="cd_sensitive_icon">Icono sismo sensible</string>
+    <string name="cd_paint_circle">Quake magnitude color</string>
+    <string name="cd_toolbar_image">Toolbar background image</string>
+    <string name="quake_time_day_info_windows">%1$d d ago</string>
+    <string name="quake_time_day_hour_info_windows">%1$d d %2$d h ago</string>
+    <string name="quake_time_hour_info_windows">%1$d h ago</string>
+    <string name="quake_time_minute_info_windows">%1$d m ago</string>
+    <string name="quake_time_second_info_windows">%1$d s ago</string>
+    <string name="cd_datetime_icon">DateTime quake icon</string>
+    <string name="date_time_title">Date/Hour</string>
+    <string name="gms_icon">Georeference position quake icon</string>
+    <string name="gms_title">Position DMS</string>
+    <string name="cd_depth_icon">Epicenter icon</string>
+    <string name="cd_scale_icon">Scale icon</string>
+    <string name="depth_title">Depth</string>
+    <string name="scale_title">Scale</string>
+    <string name="local_magnitude">Magnitude local (Ml)</string>
+    <string name="moment_magnitude" tools:ignore="Typos">Moment magnitude (Mw)</string>
+    <string name="cd_sensitive_icon">Sensitive quake icon</string>
     <string name="south_cords" translatable="false">S</string>
     <string name="north_cords" translatable="false">N</string>
-    <string name="west_cords">O</string>
+    <string name="west_cords">W</string>
     <string name="east_cords">E</string>
-    <string name="cd_quake_list_section">Sección listado de sismos</string>
-    <string name="cd_share_quake_button">Botón compartir sismo</string>
-    <string name="cd_quake_state_icon">Imagen estado sismo</string>
-    <string name="quakes_details_estado_sismo">Sismo %s</string>
-    <string name="quakes_details_estado_sismo_preliminar">preliminar</string>
-    <string name="quakes_details_estado_sismo_verificado">verificado</string>
-    <string name="quake_list_number_pref_summary">Número de sismos que quieres ver en lista</string>
-    <string name="quake_list_number_pref_title">Datos sismos</string>
-    <string name="cd_monthly_report_icon">Icono reporte mensual</string>
-    <string name="n_report_quakes">N° sismos reportados</string>
-    <string name="n_quakes_sensitives">N° sismos sensibles</string>
-    <string name="magnitude_mean">Promedio magnitud</string>
-    <string name="mean_depth_epicentre">Promedio profundidad epicentro</string>
-    <string name="max_magnitude">Máxima magnitud</string>
-    <string name="min_depth">Mínima profundidad</string>
-    <string name="top_cities">Top ciudades con más sismos</string>
-    <string name="alert_pref_summary">Recibe notificaciones de sismos</string>
-    <string name="alert_pref_title">Notificaciones</string>
-    <string name="alert_pref_title_switch">Alertas de sismos</string>
-    <string name="alert_pref_summary_on">Activadas</string>
-    <string name="alert_pref_summary_off">Desactivadas</string>
+    <string name="cd_quake_list_section">List of quakes section</string>
+    <string name="cd_share_quake_button">Button to share quake</string>
+    <string name="cd_quake_state_icon">Quake status image</string>
+    <string name="quakes_details_estado_sismo">Quake %s</string>
+    <string name="quakes_details_estado_sismo_preliminar">preliminary</string>
+    <string name="quakes_details_estado_sismo_verificado">verified</string>
+    <string name="quake_list_number_pref_summary">Number of quakes you want to see</string>
+    <string name="quake_list_number_pref_title">Quake data</string>
+    <string name="cd_monthly_report_icon">Monthly report icon</string>
+    <string name="n_report_quakes">N° reported quakes</string>
+    <string name="n_quakes_sensitives">N° sensitive quakes</string>
+    <string name="magnitude_mean">Average magnitude</string>
+    <string name="mean_depth_epicentre">Average epicenter depth</string>
+    <string name="max_magnitude">Maximum magnitude</string>
+    <string name="min_depth">Minimum depth</string>
+    <string name="top_cities">Top cities with the most earthquakes</string>
+    <string name="alert_pref_summary">Receive quakes notifications</string>
+    <string name="alert_pref_title">Notifications</string>
+    <string name="alert_pref_title_switch">Quake alerts</string>
+    <string name="alert_pref_summary_on">Enabled</string>
+    <string name="alert_pref_summary_off">Disabled</string>
     <plurals name="list_quake_number_summary">
         <item quantity="one">Último %d sismo</item>
         <item quantity="other">Últimos %d sismos</item>
     </plurals>
-    <string name="night_mode_key_toast_on">Modo noche activado</string>
-    <string name="night_mode_key_toast_off">Modo noche desactivado</string>
-    <string name="night_mode_pref_summary">Ahorra batería y evita tu cansancio ocular</string>
-    <string name="night_mode_pref_title">Modo noche</string>
-    <string name="night_mode_pref_title_switch">Modo noche</string>
-    <string name="night_mode_manual_pref_summary_on">Activado</string>
-    <string name="night_mode_manual_pref_summary_off">Desactivado</string>
+    <string name="night_mode_key_toast_on">Night mode on</string>
+    <string name="night_mode_key_toast_off">Night mode off</string>
+    <string name="night_mode_pref_summary">Save battery and avoid your eyestrain</string>
+    <string name="night_mode_pref_title">Night mode</string>
+    <string name="night_mode_manual_pref_summary_on">Enabled</string>
+    <string name="night_mode_manual_pref_summary_off">Disabled</string>
 
-    <string name="JAN">Enero</string>
-    <string name="FEB">Febrero</string>
-    <string name="MAR">Marzo</string>
+    <string name="JAN">January</string>
+    <string name="FEB">February</string>
+    <string name="MAR">March</string>
     <string name="APR">April</string>
-    <string name="MAY">Mayo</string>
-    <string name="JUN">Junio</string>
-    <string name="JUL">Julio</string>
-    <string name="AUG">Agosto</string>
-    <string name="SEP">Septiembre</string>
-    <string name="OCT">Octubre</string>
-    <string name="NOV">Noviembre</string>
-    <string name="DEC">Diciembre</string>
-    <string name="intent_chooser">Compartir sismos</string>
-    <string name="version">Versión</string>
-    <string name="change_log_title">¿Qué hay de nuevo en la app?</string>
-    <string name="novedades">Novedades</string>
-    <string name="ok">Entendido</string>
-    <string name="map_type">Tipo de mapa</string>
-    <string name="cd_new_version_icon">Icono nueva version</string>
-    <string name="menu_map_style_title">Estilo Mapa</string>
-    <string name="see_more">Ver más</string>
-    <string name="http_error">Ups, algo funcionó mal!</string>
-    <string name="io_error">Revisa tu conexión a Internet</string>
+    <string name="MAY">May</string>
+    <string name="JUN">June</string>
+    <string name="JUL">July</string>
+    <string name="AUG">August</string>
+    <string name="SEP">September</string>
+    <string name="OCT">October</string>
+    <string name="NOV">November</string>
+    <string name="DEC">December</string>
+    <string name="intent_chooser">Share quakes</string>
+    <string name="version">"Version "</string>
+    <string name="change_log_title">What\'s new in the app?</string>
+    <string name="novedades">New things</string>
+    <string name="ok">OK</string>
+    <string name="map_type">Map type</string>
+    <string name="cd_new_version_icon">New Version Icon</string>
+    <string name="menu_map_style_title">Map style</string>
+    <string name="see_more">Visit site</string>
+    <string name="http_error">Oops, something went wrong!</string>
+    <string name="io_error">Check your internet connection</string>
     <string name="ad" translatable="false">Ad</string>
-    <string name="cd_ad_app_icon">Icono publicidad aplicación</string>
-    <string name="about_msg">LastQuakeChile, te permite visualizar rápidamente los últimos sismos ocurridos en Chile</string>
-    <string name="contact_developer">Contacto desarrollador</string>
-    <string name="contact_summary">¿Sugerencias? ¿Problemas?</string>
-    <string name="about">Acerca</string>
-    <string name="cd_wifi_off">Wifi apagado</string>
-    <string name="wifi_off_msg">Por favor, revisa tu conexión</string>
-    <string name="email_intent_fail">No tienes ninguna app de email para contactarnos</string>
-    <string name="email_chooser_title">Envia un email usando:</string>
-    <string name="email_subject">Contacto desarrollador LastQuakeChile</string>
-    <string name="retry">Reintentar</string>
-    <string name="service_error">Servidor de sismos no disponible</string>
-    <string name="menu_reload_title">Recargar</string>
-    <string name="no_mas_sismos">No hay más items</string>
-    <string name="swipe_left">Desliza a la izquierda para ver sismos</string>
-    <string name="local_copy">Mostrando copia local</string>
-    <string name="cd_swipe_left_icon">Icono izquierda</string>
-    <string name="view_quake_notification_button">Ver sismo</string>
-    <string name="shortcut_short_map_label">Mapa sismos</string>
-    <string name="shortcut_long_map_label">Mapa últimos sismos</string>
-    <string name="shortcut_map_disabled">Mapa deshabilitado</string>
-    <string name="shortcut_short_list_label">Lista sismos</string>
-    <string name="shortcut_long_list_label">Lista últimos sismos</string>
-    <string name="shortcut_list_disabled">Lista deshabilitada</string>
-    <string name="shortcut_short_report_label">Reportes mensuales</string>
-    <string name="shortcut_long_report_label">Reportes sísmicos mensuales</string>
-    <string name="shortcut_report_disabled">Reporte deshabilitado</string>
-    <string name="alert_title_notification">¡Alerta sísmica!</string>
-    <string name="alert_description_notification">Sismo de %1$.1f registrado a %2$s</string>
-    <string name="preliminary_format_notification">[Preliminar] %s</string>
-    <string name="verified_format_notification">[Corrección] %s</string>
-    <string name="no_alert_title_notification">Sismo de %.1f</string>
-    <string name="no_alert_description_notification">Registrado a %s</string>
-    <string name="ad_title_offline">Sismos en chile</string>
-    <string name="ad_description_offline">Revisa los últimos sismos en Chile</string>
-    <string name="swipe_to_left">Desliza a la izquierda</string>
-    <string name="cd_multimedia_content">Contenido multimedia de publicidad</string>
-    <string name="cd_stars">Puntaje estrellas aplicación publicidad</string>
-    <string name="cd_ad_pager">Pestaña publicidad</string>
-    <string name="cd_quakes_pager">Pestaña sismos</string>
-    <string name="cd_map_pager">Pestaña mapa</string>
-    <string name="cd_reports_pager">Pestaña reportes</string>
-    <string name="high_priority_summary">Mostrar vista previa de alertas en la parte superior de la pantalla</string>
-    <string name="high_priority_title">Alertas de alta prioridad</string>
-    <string name="preliminary_pref_title">Alertas de sismos preliminares</string>
-    <string name="menu_service_status_title">Estado del servicio</string>
-    <string name="minimum_magnitude_title">Magnitud mínima alerta</string>
-    <string name="min_magnitude_dialog_title">Magnitud minima</string>
-    <string name="min_magnitude_dialog_message">Sismos mayores que … \nEjemplo: 5.6, 3.5, 2.9, etc.</string>
-    <string name="improvement_1">- Nuevo sistema de notificaciones: alertas de sismos preliminares, alertas con magnitudes personalizables y alertas de alta prioridad. (Véase sección configuraciones)</string>
-    <string name="improvement_2">- Mejoras de estabilidad de sistema</string>
-    <string name="activate_button">Activar</string>
-    <string name="alert_permission_description">Este dispositivo cuenta con Android 13. Para recibir alertas de sismos se requiere activar el permiso para notificaciones</string>
-    <string name="alert_permission_title">Permiso para alertas sísmicas</string>
-    <string name="privacy_policy">Política de privacidad</string>
+    <string name="cd_ad_app_icon">Icon ad app</string>
+    <string name="about_msg">LastQuakeChile, allows you to quickly view the latest earthquakes in Chile</string>
+    <string name="contact_developer">Contact developer</string>
+    <string name="contact_summary">Suggestions? Problems?</string>
+    <string name="about">About</string>
+    <string name="cd_wifi_off">Wifi turn off</string>
+    <string name="wifi_off_msg">Check your connection</string>
+    <string name="email_intent_fail">You don\'t have any email app to contact us</string>
+    <string name="email_chooser_title">Send email with:</string>
+    <string name="email_subject">LastQuakeChlle developer contact</string>
+    <string name="retry">Retry</string>
+    <string name="service_error">Quake server not available</string>
+    <string name="menu_reload_title">Reload</string>
+    <string name="no_mas_sismos">No more items</string>
+    <string name="swipe_left">Swipe left to see earthquakes</string>
+    <string name="local_copy">Showing local copy</string>
+    <string name="cd_swipe_left_icon">Left icon</string>
+    <string name="view_quake_notification_button">See earthquake</string>
+    <string name="shortcut_short_map_label">Quakes map</string>
+    <string name="shortcut_long_map_label">Last quakes map</string>
+    <string name="shortcut_map_disabled">Map disabled</string>
+    <string name="shortcut_short_list_label">Quakes list</string>
+    <string name="shortcut_long_list_label">Last quakes list</string>
+    <string name="shortcut_list_disabled">List disabled</string>
+    <string name="shortcut_short_report_label">Monthly reports</string>
+    <string name="shortcut_long_report_label">Monthly reports</string>
+    <string name="shortcut_report_disabled">Report disabled</string>
+    <string name="alert_title_notification">Earthquake alert!</string>
+    <string name="alert_description_notification">Quake of %1$.1f registered at %2$s</string>
+    <string name="preliminary_format_notification">[Preliminary] %s</string>
+    <string name="verified_format_notification">[Correction] %s</string>
+    <string name="no_alert_title_notification">Quake of %.1f</string>
+    <string name="no_alert_description_notification">Registered at %s</string>
+    <string name="ad_title_offline">Earthquakes in Chile</string>
+    <string name="ad_description_offline">Check last earthquakes in Chile</string>
+    <string name="swipe_to_left">Swipe left</string>
+    <string name="cd_multimedia_content">Ad media content</string>
+    <string name="cd_stars">Star points ad app</string>
+    <string name="cd_ad_pager">Ad section</string>
+    <string name="cd_quakes_pager">Quakes section</string>
+    <string name="cd_map_pager">Map section</string>
+    <string name="cd_reports_pager">Reports section</string>
+    <string name="high_priority_summary">Show previews of notifications at the top of the screen</string>
+    <string name="high_priority_title">Use high priority notifications</string>
+    <string name="preliminary_pref_title">Preliminary quakes alerts</string>
+    <string name="menu_service_status_title">Service status</string>
+    <string name="minimum_magnitude_title">Minimum magnitude alert</string>
+    <string name="min_magnitude_dialog_title">Minimum magnitude</string>
+    <string name="min_magnitude_dialog_message">Earthquakes greater than … \nExample: 5.6, 3.5, 2.9, etc</string>
+    <string name="improvement_1">- New notification system: preliminary earthquake alerts, alerts with customizable magnitudes and high priority alerts (See configs section)</string>
+    <string name="improvement_2">- Stability improvements</string>
+    <string name="activate_button">Activate</string>
+    <string name="alert_permission_description">This device is running Android 13. To receive earthquake alerts it is required to activate the permission for notifications.</string>
+    <string name="alert_permission_title">Permission for earthquake alerts</string>
+    <string name="privacy_policy">Privacy policy</string>
     <string name="cd_details_icon">Open details icon</string>
     <string name="details">Details</string>
     <string name="share">Share</string>
